--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "powerbi-client-react": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-kakao-login": "^2.1.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
